修改点的颜色- uniform 变量

--- a/07-uniform变量.html
+++ b/07-uniform变量.html
@@ -40,7 +40,9 @@
         `;
       // b. 片元着色器
       let FRAGMENT_SHADER_SOURCE = `
+            // 必须设置颜色的精度
             precision mediump float;
+            
             uniform vec4 uColor;
 
             void main() {
