着色器-平移矩阵

--- a/015-着色器-平移矩阵.html
+++ b/015-着色器-平移矩阵.html
@@ -31,15 +31,14 @@
 
             attribute vec4 aPosition;
 
-            attribute float deg;
+            uniform mat4 mat;
 
             void main() {
               // 要绘制的点的坐标
-              // 旋转公式：
-              gl_Position.x = aPosition.x * cos(deg) - aPosition.y * sin(deg);
-              gl_Position.y = aPosition.x * sin(deg) + aPosition.y * cos(deg);
-              gl_Position.z = aPosition.z;
-              gl_Position.w = aPosition.w;
+              gl_Position = mat * aPosition;
+
+              // 要绘制的点的大小
+              gl_PointSize = 10.0;
             }
         `;
       // b. 片元着色器
@@ -82,9 +81,17 @@
 
       // 获取 attribute 变量
       let aPosition = gl.getAttribLocation(program, "aPosition");
-      let deg = gl.getAttribLocation(program, "deg");
+      let mat = gl.getUniformLocation(program, "mat");
 
-      // 用类型数组声明 3 个点的坐标
+      function getTranslateMatrix(x = 0, y = 0, z = 0) {
+        return new Float32Array([
+          1.0, 0.0, 0.0, 0.0,
+          0.0, 1.0, 0.0, 0.0,
+          0.0, 0.0, 1.0, 0.0,
+          x,     y,   z,   1
+        ]);
+      }
+
       let points = new Float32Array([-0.5, -0.5, 0.5, -0.5, 0.5, 0.5]);
 
       // 创建位置缓冲区
@@ -95,16 +102,24 @@
       gl.enableVertexAttribArray(aPosition);
 
       // 6、绘制
-      let x = 1;
+      let x = -1;
 
-      function animate() {
-        x += -0.1;
-        gl.vertexAttrib1f(deg, x);
+      function animation() {
+        x = x + 0.01;
+
+        if (x > 1) {
+          x = -1;
+        } 
+        
+        let matrix = getTranslateMatrix(x)
+        
+        gl.uniformMatrix4fv(mat, false, matrix);
         gl.drawArrays(gl.TRIANGLES, 0, 3);
 
-        requestAnimationFrame(animate);
+        requestAnimationFrame(animation);
       }
-      animate()
+
+      animation()
     </script>
   </body>
 </html>
